--- a/client/src/app/orders/orders-container/orders-container.component.html
+++ b/client/src/app/orders/orders-container/orders-container.component.html
@@ -1,11 +1,8 @@
-<div class="container w-4/5 mx-auto mt-10 grid grid-cols-[25%_1fr] gap-x-8">
-  <div>
+<div class="w-[90%] xl:w-4/5 mx-auto grid grid-rows-[45px_1fr] gap-y-4 py-6 sm:py-10">
+  <h1 class="text-2xl font-medium justify-self-start">Замовлення</h1>
+
+  <div class="grid grid-cols-1 sm:grid-cols-[28%_1fr] gap-x-8">
     <app-orders-actions></app-orders-actions>
-  </div>
-  <div class="grid grid-rows-[45px_1fr] gap-y-6">
-    <div class="flex items-center">
-      <h1 class="text-2xl font-medium">Замовлення</h1>
-    </div>
     <app-orders-list></app-orders-list>
   </div>
 </div>
