--- a/client/src/app/orders/orders-list/orders-list.component.html
+++ b/client/src/app/orders/orders-list/orders-list.component.html
@@ -12,7 +12,7 @@
       <pagination-controls class="order-pagination" id="orders" previousLabel="Попередня" nextLabel="Наступна" (pageChange)="pageChanged($event)"></pagination-controls>
     </div>
   </div>
-  <div class="fixed inset-x-[60%] inset-y-[45%]" *ngIf="(loading$ | async) || !orders">
+  <div class="fixed inset-x-[42%] sm:inset-x-[60%] inset-y-[45%]" *ngIf="(loading$ | async) || !orders">
     <mat-spinner diameter="70"></mat-spinner>
   </div>
 </div>
