--- a/client/src/app/orders/submit-proposal-modal/submit-proposal-modal.component.html
+++ b/client/src/app/orders/submit-proposal-modal/submit-proposal-modal.component.html
@@ -1,4 +1,4 @@
-<app-modal-container [width]="'450px'" [title]="'Подання пропозиції'" [showClose]="true">
+<app-modal-container [size]="['w-auto', 'sm:w-[450px]', 'h-auto']" [title]="'Подання пропозиції'" [showClose]="true">
   <div mat-dialog-content>
     <form class="w-full mt-3" [formGroup]="proposalForm" (ngSubmit)="onSubmit()">
       <div *ngIf="data.userRole === Roles.Supplier && !data.proposalId && CategoryTypes[data.orderCategoryType] === CategoryTypes.Goods">
@@ -19,7 +19,7 @@
       <app-input [label]="label" [control]="getFormControl('price')"></app-input>
 
       <p class="text-center italic"><span class="text-red-600">*</span> позначені обов'язкові поля</p>
-      <p class="mt-2 text-center text-red-600 h-[20px]">{{(error$ | async) ?? ''}}</p>
+      <p class="mt-2 text-center text-red-600 h-auto min-h-[20px] break-words">{{(error$ | async) ?? ''}}</p>
       <div class="flex justify-center">
         <app-button text="Подати" [disabled]="!proposalForm.valid" type="submit"
           [classList]="['mt-3', 'h-[45px]', 'w-[155px]']"></app-button>
