--- a/client/src/app/requests/requests-list/requests-list.component.html
+++ b/client/src/app/requests/requests-list/requests-list.component.html
@@ -13,7 +13,7 @@
     </div>
   </div>
 
-  <div class="fixed inset-x-[60%] inset-y-[45%]" *ngIf="(loading$ | async) || !requests">
+  <div class="fixed inset-x-[42%] sm:inset-x-[60%] inset-y-[45%]" *ngIf="(loading$ | async) || !requests">
     <mat-spinner diameter="70"></mat-spinner>
   </div>
 </div>
