--- a/client/src/app/auth/create-company-modal/create-company-modal.component.html
+++ b/client/src/app/auth/create-company-modal/create-company-modal.component.html
@@ -1,4 +1,4 @@
-<app-modal-container [width]="'450px'" [title]="'Створення компанії'" [showClose]="true">
+<app-modal-container [size]="['w-auto', 'sm:w-[450px]', 'h-auto']" [title]="'Створення компанії'" [showClose]="true">
   <div mat-dialog-content>
     <form class="w-full mt-3" [formGroup]="companyForm" (ngSubmit)="onSubmit()">
       <app-input label="Назва" [control]="getFormControl('title')"></app-input>
@@ -10,7 +10,7 @@
       <app-input label="Номер будівлі" [control]="getFormControl('buildingNumber')" [required]="false"></app-input>
       <app-input label="Поштовий індекс" [control]="getFormControl('zipCode')"></app-input>
       <p class="text-center italic"><span class="text-red-600">*</span> позначені обов'язкові поля</p>
-      <p class="mt-2 text-center text-red-600 h-[20px]">{{(error$ | async) ?? ''}}</p>
+      <p class="mt-2 text-center text-red-600 h-auto min-h-[20px] break-words">{{(error$ | async) ?? ''}}</p>
       <div class="flex justify-center">
         <app-button text="Створити" [disabled]="!companyForm.valid" type="submit"
           [classList]="['mt-3', 'h-[45px]', 'w-[155px]']"></app-button>
