--- a/client/src/app/auth/registration/registration.component.html
+++ b/client/src/app/auth/registration/registration.component.html
@@ -1,8 +1,8 @@
 <div class="h-full flex flex-col items-center justify-center">
-  <div class="w-[60%]">
+  <div class="w-[90%] md:w-[80%] lg:w-[75%] xl:w-[60%]">
     <h1 class="text-2xl text-center font-medium">Реєстрація</h1>
     <form class="w-full mt-5" [formGroup]="userForm" (ngSubmit)="onSubmit()">
-      <div class="grid grid-cols-2 gap-x-6">
+      <div class="sm:grid sm:grid-cols-2 sm:gap-x-6">
         <div>
           <app-input label="Прізвище" [control]="getFormControl('lastName')"></app-input>
           <app-input label="Ім'я" [control]="getFormControl('firstName')"></app-input>
@@ -12,16 +12,22 @@
         </div>
         <div class="flex flex-col justify-between">
           <app-dropdown label="Компанія" [control]="getFormControl('companyId')" [displayProps]="['title']" [items]="(companies$ | async)">
-            <p class="absolute -bottom-5 text-sm italic">Не знайшли свою компанію? <span class="underline text-[#2CA9D5] cursor-pointer" (click)="openCreateCompanyDialog()">Зареєструйте її зараз</span></p>
+            <div class="mt-[6px] flex flex-col items-center lg:flex-row lg:gap-x-1 text-sm">
+              <p class="italic">Не знайшли свою компанію?</p>
+              <span class="underline text-[#2CA9D5] cursor-pointer" (click)="openCreateCompanyDialog()">Зареєструйте її зараз</span>
+            </div>
           </app-dropdown>
           <app-dropdown label="Підрозділ" [control]="getFormControl('subdivisionId')" [displayProps]="['title']" [items]="(subdivisions$ | async)" errorMessage="Підрозділ має бути обраний">
-            <p class="absolute -bottom-5 text-sm italic">Не знайшли свій підрозділ? <span class="underline text-[#2CA9D5] cursor-pointer" (click)="openCreateSubdivisionDialog()">Зареєструйте його зараз</span></p>
+            <div class="mt-[6px] flex flex-col items-center lg:flex-row lg:gap-x-1 text-sm">
+              <p class="italic">Не знайшли свій підрозділ?</p>
+              <span class="underline text-[#2CA9D5] cursor-pointer" (click)="openCreateSubdivisionDialog()">Зареєструйте його зараз</span>
+            </div>
           </app-dropdown>
           <app-input label="Пароль" type="password" [control]="getFormControl('password')"></app-input>
         </div>
       </div>
       <p class="text-center italic"><span class="text-red-600">*</span> позначені обов'язкові поля</p>
-      <p class="mt-2 text-center text-red-600 h-[20px]">{{(registrationError$ | async) ?? '' }}</p>
+      <p class="mt-2 text-center text-red-600 h-auto min-h-[20px]">{{(registrationError$ | async) ?? '' }}</p>
       <div class="flex flex-col justify-center items-center">
         <p class="text-base italic">Вже маєте акаунт?
           <a [routerLink]="['../login']" class="underline text-[#2CA9D5] cursor-pointer">Увійти</a>
