--- a/client/src/app/categories/categories-list/categories-list.component.html
+++ b/client/src/app/categories/categories-list/categories-list.component.html
@@ -1,21 +1,21 @@
-<div class="container w-3/5 mx-auto mt-10 grid grid-rows-[45px_1fr] gap-y-6">
+<div class="w-[90%] md:w-[80%] lg:w-[70%] xl:w-3/5 mx-auto py-6 sm:py-10">
 
-  <div class="flex flex-row justify-between items-center">
+  <div class="grid grid-rows-[auto_45px] gap-y-4 sm:flex sm:flex-row sm:justify-between sm:items-center sm:gap-y-0 sm:h-[45px]">
     <h1 class="text-2xl font-medium justify-self-start">Категорії</h1>
     <app-button text="+ Створити категорію" type="button" [classList]="['h-[45px]', 'w-auto']" (click)="openCreateCategoryDialog()"></app-button>
   </div>
 
-  <div *ngIf="(categories$ | async) as categories; else loading">
-    <div class="grid grid-cols-2 gap-4" *ngIf="categories.length > 0">
+  <div class="mt-6" *ngIf="(categories$ | async) as categories; else loading">
+    <div class="grid grid-cols-1 sm:grid-cols-2 gap-4" *ngIf="categories.length > 0">
       <div *ngFor="let category of categories" class="w-full bg-white rounded-xl shadow-gray-400 p-5">
-        <div class="flex justify-between">
+        <div class="flex justify-between items-center">
           <span>{{ category.title }}</span>
           <span class="w-20 p-1 border rounded-lg text-center" [ngClass]="CategoryTypesColors[category.type]">{{ CategoryTypes[category.type] }}</span>
         </div>
       </div>
     </div>
 
-    <div class="fixed inset-x-[49%] inset-y-[45%] h-fit w-fit" *ngIf="categories.length === 0">
+    <div class="fixed inset-x-[42%] sm:inset-x-[49%] inset-y-[45%] h-fit w-fit" *ngIf="categories.length === 0">
       <div class="flex flex-col justify-center items-center">
         <mat-icon>content_paste_search</mat-icon>
         <span class="mt-3 text-[#898E96] font-semibold text-center">Категорій немає</span>
@@ -24,7 +24,7 @@
   </div>
 
   <ng-template #loading>
-    <div class="fixed inset-x-[49%] inset-y-[45%]">
+    <div class="fixed inset-x-[42%] sm:inset-x-[49%] inset-y-[45%]">
       <mat-spinner diameter="70"></mat-spinner>
     </div>
   </ng-template>
