--- a/client/src/app/orders/order-info/order-info.component.html
+++ b/client/src/app/orders/order-info/order-info.component.html
@@ -1,5 +1,6 @@
 <div class="flex flex-col justify-center gap-y-2">
   <ng-content></ng-content>
+  <p *ngIf="proposalStatus && proposalStatusColor" [ngClass]="['xl:hidden', proposalStatusColor]">{{ proposalStatus }}</p>
   <p>{{ person.companyTitle }}</p>
   <p>Код ЄДРПОУ: {{ person.companyEdrpou }}</p>
   <p *ngIf="showCompanyAddress">Адреса: {{ tranformCompanyAddress(person.companyAddress) }}</p>
