--- a/client/src/app/orders/orders-list-item/orders-list-item.component.html
+++ b/client/src/app/orders/orders-list-item/orders-list-item.component.html
@@ -1,24 +1,25 @@
-<div class="w-full bg-white rounded-xl shadow-gray-400 p-6 mb-4">
-  <div class="grid grid-cols-[50%_15%_1fr] gap-x-4">
+<div class="my-4 relative w-full bg-white rounded-xl shadow-gray-400 p-6">
+  <div class="xl:grid xl:grid-cols-[50%_15%_1fr] xl:gap-x-4 mb-8">
     <div>
       <h3 class="font-semibold text-xl text-[#2FCB80]">{{order.title}}</h3>
+      <p [ngClass]="['mt-2', 'md:hidden', StatusesColors[order.status]]">{{OrderStatuses[order.status]}}</p>
       <p class="mt-3 underline">Номер: {{ order.id }}</p>
       <p class="mt-3">{{ order.buyerContactPerson.companyTitle }}</p>
       <p class="mt-3">Бюджет: {{order.budget}} (грн.)</p>
     </div>
 
-    <div>
-      <span [ngClass]="['h-fit', 'text-center', StatusesColors[order.status]]">{{OrderStatuses[order.status]}}</span>
-    </div>
+    <span [ngClass]="['hidden', 'md:inline-block', 'h-fit', 'text-center', 'md:absolute', 'md:right-6', 'md:top-6', 'xl:static', StatusesColors[order.status]]">{{OrderStatuses[order.status]}}</span>
 
-    <div class="grid grid-flow-row grid-rows-[auto_1fr] gap-y-3">
-      <p class="text-right italic text-[#A9A9A9] text-sm">
+    <div class="xl:grid xl:grid-flow-row xl:grid-rows-[auto_1fr] xl:gap-y-3">
+      <p class="absolute right-6 bottom-6 xl:static text-right italic text-[#A9A9A9] text-sm">
         Створене {{order.createdAt | date:'HH:mm:ss dd MMMM y':'uk-UA'}}
       </p>
-      <div class="grid justify-center items-center" *ngIf="(user$ | async) as user">
-        <app-button text="Деталі" type="button" [classList]="['h-[45px]', 'w-[155px]']" (click)="openOrderDetails()"></app-button>
-        <div *ngIf="user.id === order.buyerContactPerson.id && OrderStatuses[order.status] === OrderStatuses.Active && user.role === Roles.Customer">
-          <app-button text="Скасувати" type="button" [classList]="['border', 'border-[#E74C3C]', 'h-[45px]', 'w-[155px]']" [colors]="['bg-transparent', 'text-[#E74C3C]']" (click)="cancelOrder()"></app-button>
+      <div class="mt-5 xl:mt-0 grid justify-center items-center" *ngIf="(user$ | async) as user">
+        <div class="grid gap-y-2 sm:gap-x-4 xl:grid-cols-1 xl:gap-x-0 justify-center" [ngClass]="user.id === order.buyerContactPerson.id && OrderStatuses[order.status] === OrderStatuses.Active && user.role === Roles.Customer ? 'sm:grid-cols-2' : 'sm:grid-cols-1'">
+          <app-button text="Деталі" type="button" [classList]="['h-[45px]', 'w-[155px]']" (click)="openOrderDetails()"></app-button>
+          <div *ngIf="user.id === order.buyerContactPerson.id && OrderStatuses[order.status] === OrderStatuses.Active && user.role === Roles.Customer">
+            <app-button text="Скасувати" type="button" [classList]="['border', 'border-[#E74C3C]', 'h-[45px]', 'w-[155px]']" [colors]="['bg-transparent', 'text-[#E74C3C]']" (click)="cancelOrder()"></app-button>
+          </div>
         </div>
       </div>
     </div>
