--- a/client/src/app/requests/create-order-modal/create-order-modal.component.html
+++ b/client/src/app/requests/create-order-modal/create-order-modal.component.html
@@ -1,4 +1,4 @@
-<app-modal-container [width]="'450px'" [title]="'Формування замовлення'" [showClose]="true">
+<app-modal-container [size]="['w-auto', 'sm:w-[450px]', 'h-auto']" [title]="'Формування замовлення'" [showClose]="true">
   <div mat-dialog-content>
     <form class="w-full mt-3" [formGroup]="orderForm" (ngSubmit)="onSubmit()">
       <app-textarea label="Назва" [control]="getFormControl('title')"></app-textarea>
@@ -15,7 +15,7 @@
       </div>
 
       <p class="text-center italic"><span class="text-red-600">*</span> позначені обов'язкові поля</p>
-      <p class="mt-2 text-center text-red-600 h-[20px]">{{(error$ | async) ?? ''}}</p>
+      <p class="mt-2 text-center text-red-600 h-auto min-h-[20px] break-words">{{(error$ | async) ?? ''}}</p>
       <div class="flex justify-center">
         <app-button text="Сформувати" [disabled]="!orderForm.valid" type="submit"
           [classList]="['mt-3', 'h-[45px]', 'w-[155px]']"></app-button>
