--- a/client/src/app/requests/requests-actions/requests-actions.component.html
+++ b/client/src/app/requests/requests-actions/requests-actions.component.html
@@ -1,4 +1,4 @@
-<div class="mt-16">
+<div class="mt-0 sm:mt-2">
   <app-dropdown label="Статус" [control]="getFormControl('status')" [displayProps]="['value']" [items]="requestStatuses" [optionValueProp]="'key'" [required]="false" [emitSelectionChangeEvent]="true" (onSelectionChange)="setRequestParamsStatus($event)" *ngIf="(user$ | async)?.role === Roles.Applicant">
   </app-dropdown>
 
