--- a/client/src/app/requests/requests-container/requests-container.component.html
+++ b/client/src/app/requests/requests-container/requests-container.component.html
@@ -1,15 +1,16 @@
-<div class="container w-4/5 mx-auto mt-10 grid grid-cols-[25%_1fr] gap-x-8">
-  <div>
-    <app-requests-actions></app-requests-actions>
-  </div>
-  <div class="grid grid-rows-[45px_1fr] gap-y-6">
-    <div class="flex flex-row justify-between items-center">
-      <h1 class="text-2xl font-medium justify-self-start">Заявки</h1>
-      <div *ngIf="(user$ | async) as user">
-        <app-button *ngIf="user.role === Roles.Applicant" text="+ Створити заявку" type="button" [classList]="['h-[45px]', 'w-auto']" (click)="openCreateRequestDialog()"></app-button>
-        <app-button *ngIf="user.role === Roles.Customer" text="Сформувати замовлення" type="button" [classList]="['h-[45px]', 'w-auto']" (click)="openCreateOrderDialog()" [disabled]="!(orderRequests$ | async)?.length"></app-button>
-      </div>
+<div class="w-[90%] xl:w-4/5 mx-auto grid grid-rows-[auto_1fr] gap-y-4 py-6 sm:py-10">
+
+  <div class="grid grid-rows-[auto_45px] gap-y-4 sm:flex sm:flex-row sm:justify-between sm:items-center sm:gap-y-0 sm:h-[45px]">
+    <h1 class="text-2xl font-medium justify-self-start">Заявки</h1>
+    <div *ngIf="(user$ | async) as user">
+      <app-button *ngIf="user.role === Roles.Applicant" text="+ Створити заявку" type="button" [classList]="['h-[45px]', 'w-auto']" (click)="openCreateRequestDialog()"></app-button>
+      <app-button *ngIf="user.role === Roles.Customer" text="Сформувати замовлення" type="button" [classList]="['h-[45px]', 'w-auto']" (click)="openCreateOrderDialog()" [disabled]="!(orderRequests$ | async)?.length"></app-button>
     </div>
+  </div>
+
+  <div class="grid grid-cols-1 sm:grid-cols-[25%_1fr] gap-x-8">
+    <app-requests-actions></app-requests-actions>
     <app-requests-list></app-requests-list>
   </div>
+
 </div>
