--- a/client/src/app/shared/_modals/modal-redirect/modal-redirect.component.html
+++ b/client/src/app/shared/_modals/modal-redirect/modal-redirect.component.html
@@ -1,4 +1,4 @@
-<app-modal-container [width]="data.width ?? '450px'" [height]="data.height ?? 'auto'" [showClose]="false">
+<app-modal-container [size]="['w-auto', 'sm:w-[450px]', 'h-auto']" [showClose]="false">
   <div>
     <div class="flex justify-center mb-2">
       <img src="assets/images/success.svg" alt="success" *ngIf="data.successfull" />
@@ -10,7 +10,7 @@
     </div>
   </div>
 
-  <div class="mt-3 flex justify-around items-center" mat-dialog-actions>
+  <div class="mt-3 flex flex-col sm:flex-row justify-center sm:justify-around items-center gap-y-2" mat-dialog-actions>
     <app-button *ngIf="data.secondaryBtn" [text]="data.secondaryBtn.text" [mat-dialog-close]
       [routerLink]="data.secondaryBtn.route" [classList]="['w-[180px]']"></app-button>
     <app-button [text]="data.primaryBtn.text" [mat-dialog-close]
