--- a/client/src/app/shared/checkbox/checkbox.component.scss
+++ b/client/src/app/shared/checkbox/checkbox.component.scss
@@ -1,9 +1,8 @@
 input {
   background-color: white;
   border-color: #5FCFF7;
-}
-
-input:checked {
-  border-color: #5FCFF7;
-  background-color: #5FCFF7;
+  &:checked {
+    border-color: #5FCFF7;
+    background-color: #5FCFF7;
+  }
 }
