--- a/client/src/app/shared/header/header.component.html
+++ b/client/src/app/shared/header/header.component.html
@@ -1,34 +1,15 @@
-<!-- <div class="h-14 bg-[#5FCFF7] text-white text-base flex justify-between items-center px-8 font-medium">
-  <div class="w-[25%]">
+<div class="w-full h-14 bg-[#5FCFF7] text-white text-base flex items-center px-4 sm:px-8 font-medium">
+  <div class="w-[20%] sm:w-2/5">
 
   </div>
-  <div class="w-[20%] flex justify-between">
-    <a [routerLink]="['requests']" class="cursor-pointer">Заявки</a>
-    <a [routerLink]="['orders']" class="cursor-pointer">Замовлення</a>
-  </div>
-  <div class="w-[30%] grid grid-cols-[80%_20%] items-center">
-    <div class="flex justify-center">
-      <p class="cursor-default" *ngIf="(user$ | async) as user; else spinner">{{user.lastName}} {{user.firstName}} {{user.middleName}}</p>
-      <ng-template #spinner>
-        <mat-spinner diameter="30"></mat-spinner>
-      </ng-template>
-    </div>
-    <span class="cursor-pointer" (click)="logout()">Вийти</span>
-  </div>
-</div> -->
-
-<div class="w-full h-14 bg-[#5FCFF7] text-white text-base flex items-center px-8 font-medium">
-  <div class="w-2/5">
-
-  </div>
-  <div class="w-full grid grid-cols-[60%_40%]" *ngIf="(user$ | async) as user">
-    <div class="flex justify-center gap-x-24">
+  <div class="w-full h-full grid grid-cols-[75%_1fr] sm:grid-cols-[60%_1fr]" *ngIf="(user$ | async) as user">
+    <div class="flex justify-around sm:justify-center sm:gap-x-24 items-center">
       <a [routerLink]="['categories']" class="cursor-pointer" *ngIf="user.role === Roles.Administrator">Категорії</a>
       <a [routerLink]="['requests']" class="cursor-pointer" *ngIf="user.role === Roles.Applicant || user.role === Roles.Customer">Заявки</a>
       <a [routerLink]="['orders']" class="cursor-pointer">Замовлення</a>
     </div>
-    <div class="flex justify-end gap-x-12">
-      <p class="cursor-default">{{user.lastName}} {{user.firstName}} {{user.middleName}}</p>
+    <div class="flex justify-end sm:gap-x-12 items-center">
+      <p class="hidden lg:block text-center 2xl:text-left cursor-default">{{user.lastName}} {{user.firstName}} {{user.middleName}}</p>
       <span class="cursor-pointer" (click)="logout()">Вийти</span>
     </div>
   </div>
