--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -26,14 +26,19 @@ app-button:focus-visible {
 ::-webkit-scrollbar {
   width: 8px;
   background-color: transparent;
+  &-thumb {
+    background-color: #C6C8CB;
+    border-radius: 4px;
+    &:hover {
+      background-color: #B7B9BC;
+    }
+  }
 }
 
-::-webkit-scrollbar-thumb {
-  background-color: #C6C8CB;
-  border-radius: 4px;
+@media (max-width: 639px) {
+  ::-webkit-scrollbar {
+    display: none;
+  }
 }
 
-::-webkit-scrollbar-thumb:hover {
-  background-color: #B7B9BC;
-}
 
