--- a/client/src/app/requests/edit-request-modal/edit-request-modal.component.html
+++ b/client/src/app/requests/edit-request-modal/edit-request-modal.component.html
@@ -7,8 +7,8 @@
       <p class="text-center italic"><span class="text-red-600">*</span> позначені обов'язкові поля</p>
       <p class="mt-2 text-center text-red-600 h-auto min-h-[20px] break-words">{{(error$ | async) ?? ''}}</p>
       <div class="flex justify-center">
-        <app-button text="Зберегти" [disabled]="!requestForm.valid" type="submit"
-          [classList]="['mt-3', 'h-[45px]', 'w-[155px]']" [disabled]="!requestChanged"></app-button>
+        <app-button text="Зберегти" [disabled]="!requestForm.valid || !requestChanged" type="submit"
+          [classList]="['mt-3', 'h-[45px]', 'w-[155px]']"></app-button>
       </div>
     </form>
   </div>
