--- a/client/src/app/shared/_forms/textarea/textarea.component.html
+++ b/client/src/app/shared/_forms/textarea/textarea.component.html
@@ -12,7 +12,7 @@
   </textarea>
 
   <div
-    class="h-[20px] text-sm mt-1 text-red-600">
+    class="min-h-[20px] text-sm mt-1 text-red-600">
     {{(control?.errors?.required && control?.touched) ? 'Дане поле має бути заповнене' : ''}}
   </div>
 </div>
