--- a/client/src/app/auth/registration/registration.component.html
+++ b/client/src/app/auth/registration/registration.component.html
@@ -7,7 +7,7 @@
           <app-input label="Прізвище" [control]="getFormControl('lastName')"></app-input>
           <app-input label="Ім'я" [control]="getFormControl('firstName')"></app-input>
           <app-input label="По-батькові" [control]="getFormControl('middleName')"></app-input>
-          <app-input label="Пошта" [control]="getFormControl('email')"></app-input>
+          <app-input label="Електронна пошта" [control]="getFormControl('email')"></app-input>
           <app-dropdown label="Роль" [control]="getFormControl('role')" [displayProps]="['name']" [items]="(roles$ | async)" [optionValueProp]="'name'"></app-dropdown>
         </div>
         <div class="flex flex-col justify-between">
